--- a/Shop/Web.config
+++ b/Shop/Web.config
@@ -14,6 +14,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name ="CoursesContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Shop;Integrated Security=True; AttachDBFilename=|DataDirectory|\Shop.mdf" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
