Added Migration on DB

--- a/Shop/Shop.csproj
+++ b/Shop/Shop.csproj
@@ -117,6 +117,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905052051493_InitialCreate.cs" />
+    <Compile Include="Migrations\201905052051493_InitialCreate.Designer.cs">
+      <DependentUpon>201905052051493_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905052228431_AddFieldShortDescriptionOfCourse.cs" />
+    <Compile Include="Migrations\201905052228431_AddFieldShortDescriptionOfCourse.Designer.cs">
+      <DependentUpon>201905052228431_AddFieldShortDescriptionOfCourse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\ItemOrder.cs" />
@@ -142,6 +151,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201905052051493_InitialCreate.resx">
+      <DependentUpon>201905052051493_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905052228431_AddFieldShortDescriptionOfCourse.resx">
+      <DependentUpon>201905052228431_AddFieldShortDescriptionOfCourse.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
