Added images and prototype sites

--- a/Shop/Shop.csproj
+++ b/Shop/Shop.csproj
@@ -96,9 +96,47 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\ajax-loader.gif" />
+    <Content Include="Content\Images\ajax-loader.png" />
+    <Content Include="Content\Images\baner.png" />
+    <Content Include="Content\Images\bestseller.png" />
+    <Content Include="Content\Images\dommaly.png" />
+    <Content Include="Content\Images\footer-cd.png" />
+    <Content Include="Content\Images\icons-18-black.png" />
+    <Content Include="Content\Images\icons-18-white.png" />
+    <Content Include="Content\Images\icons-36-black.png" />
+    <Content Include="Content\Images\icons-36-white.png" />
+    <Content Include="Content\Images\koszyk-details.png" />
+    <Content Include="Content\Images\koszyk.png" />
+    <Content Include="Content\Images\koszyk_white.png" />
+    <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\new.png" />
+    <Content Include="Content\Images\searchlogo.png" />
+    <Content Include="Content\Images\upload.png" />
+    <Content Include="Content\Category\aspnet.png" />
+    <Content Include="Content\Category\csharp.png" />
+    <Content Include="Content\Category\css.png" />
+    <Content Include="Content\Category\html.png" />
+    <Content Include="Content\Category\javascript.png" />
+    <Content Include="Content\Category\jquery.png" />
+    <Content Include="Content\Category\xml.png" />
+    <Content Include="Content\Courses\obrazekaspnet.png" />
+    <Content Include="Content\Courses\obrazekcsharp.png" />
+    <Content Include="Content\Courses\obrazekcss.png" />
+    <Content Include="Content\Courses\obrazekhtml.png" />
+    <Content Include="Content\Courses\obrazekjavascript.png" />
+    <Content Include="Content\Courses\obrazekjquery.png" />
+    <Content Include="Content\Courses\obrazekmvc.png" />
+    <Content Include="Content\Courses\obrazekmvc2.png" />
+    <Content Include="Content\Courses\obrazekxml.png" />
+    <Content Include="Content\Prototype.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Prototype\Cart.html" />
+    <Content Include="Prototype\Category.html" />
+    <Content Include="Prototype\Course.html" />
+    <Content Include="Prototype\Index.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
